--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Nathan Truong # your name (or website title) here
 logo: "/images/IMG_3047.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Data Graduate at the Australian Taxation Office. With a degree in Actuarial Studies (Distinction) and a passion for data science. Proficient in R, Python, SQL, and Power BI, I have commercial experience in automating workflows, data analysis, and making data-driven decisions.
   <br><br>
   Second description 
   <br><br>
