--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   Data Graduate at the ATO. With a double degree in Actuarial Studies (Distinction) and Commerce from UNSW and a passion for data science. Proficient in R, Python, SQL, and Power BI, I have commercial experience in automating workflows, data analysis, and making data-driven decisions.
   <br><br>
   <a href="https://www.linkedin.com/in/n-truong/">View My LinkedIn Profile</a> 
-  
+
+theme: jekyll-theme-minimal
 google_analytics: G-4JC6QJV6N6 # your Google Analytics tracking ID here
+
+colors:
+  crimson: '#900C3F'
