--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 title: Nathan Truong # your name (or website title) here
 logo: "/images/IMG_3047.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Graduate at the ATO. With a double degree in Actuarial Studies (Distinction) and Commerce from UNSW and a passion for data science. Proficient in R, Python, SQL, and Power BI, I have commercial experience in automating workflows, data analysis, and making data-driven decisions.
+  Welcome to my portfolio!
+  <br><br>
+  I'm Nathan, a Data Graduate at the ATO. With a double degree in Actuarial Studies (Distinction) and Commerce from UNSW and a passion for data science. I am proficient in R, Python, SQL, and Power BI, and have commercial experience in sales, data analysis, and making data-driven decisions. Explore my portfolio to discover how my skills can bring value to your team.
   <br><br>
   <a href="https://www.linkedin.com/in/n-truong/">View My LinkedIn Profile</a> 
 
