--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ logo: "/images/IMG_3047.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Welcome to my portfolio!
   <br><br>
-  I'm Nathan, a Data Scientist at ITSM. I am currently studying a Masters of Data Science at University of Sydney. I hold a double degree in Actuarial Studies (Distinction) and Commerce from UNSW. Passionate about data science with proficiency in R, Python, SQL, and Power BI. I have practical experience in sales, data analysis, and making data-driven decisions. Explore my portfolio to see how I can contribute value to your team.
+  I'm Nathan, a Data Scientist at ITSM. I am currently studying a Masters of Data Science at University of Sydney. I hold a double degree in Actuarial Studies (Distinction) and Commerce from UNSW. 
+  Passionate about data science with proficiency in R, Python, SQL, and Power BI. I have industry experience in statistical analysis, data analysis, and deploying machine learning/AI solutions. 
+  Explore my portfolio to see how I can contribute value to your team.
   <br><br>
   <a href="https://www.linkedin.com/in/n-truong/">View My LinkedIn Profile</a> 
 
