--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ logo: "/images/IMG_3047.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Welcome to my portfolio!
   <br><br>
-  I'm Nathan, a <strong>passionate Data Scientist<strong> at ITSM with over 2 years of industry experience. I'm currently pursuing a <strong>Master of Data Science</strong> at the University of Sydney. 
+  I'm Nathan, a <strong>passionate Data Scientist</strong> at ITSM with over 2 years of industry experience. I'm currently pursuing a <strong>Master of Data Science</strong> at the University of Sydney. 
   With a distinguished double degree in Actuarial Studies (Distinction) and Commerce from UNSW, I possess a strong foundation in data-driven decision-making. 
   <br><br>
-  My expertise spans across <strong>R, Python, SQL, Tableau, and Power BI<strong>, allowing me to excel in statistical analysis, data analysis, and deploying machine learning/AI solutions.  
+  My expertise spans across <strong>R, Python, SQL, Tableau, and Power BI</strong>, allowing me to excel in statistical analysis, data analysis, and deploying machine learning/AI solutions.  
   Explore my portfolio to see how these skills and experiences can bring value to your team through innovative and analytical solutions.
   <br><br>
   <a href="https://www.linkedin.com/in/n-truong/">View My LinkedIn Profile</a> 
