--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,11 @@ description: > # your text below (remove <br> elements if you don't need line br
   I'm Nathan, a <strong>passionate Data Scientist</strong> at ITSM with over 2 years of industry experience. I'm currently pursuing a <strong>Master of Data Science</strong> at the University of Sydney. 
   With a distinguished double degree in Actuarial Studies (Distinction) and Commerce from UNSW, I possess a strong foundation in data-driven decision-making. 
   <br><br>
-  My expertise spans across <strong>R, Python, SQL, Tableau, and Power BI</strong>, allowing me to excel in statistical analysis, data analysis, and deploying machine learning/AI solutions.  
-  Explore my portfolio to see how these skills and experiences can bring value to your team through innovative and analytical solutions.
+  My technical expertise spans across R, Python, SQL, and Power BI. I have a proven track record in not only performing in-depth statistical and data analysis but also in 
+  <strong>deploying scalable machine learning/AI solutions into production</strong>. This includes end-to-end model development—from data preprocessing and feature engineering to model deployment 
+  and monitoring—ensuring that insights translate into real-world impact.
+  <br><br>
+  Explore my portfolio to see how these skills and experiences can bring value to your team through innovative, production-ready solutions.
   <br><br>
   <a href="https://www.linkedin.com/in/n-truong/">View My LinkedIn Profile</a> 
 
