--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,11 @@ logo: "/images/IMG_3047.jpeg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Welcome to my portfolio!
   <br><br>
-  I'm Nathan, a <strong>passionate Data Scientist</strong> at ITSM with over 2 years of industry experience. I'm currently pursuing a <strong>Master of Data Science</strong> at the University of Sydney. 
-  With a distinguished double degree in Actuarial Studies (Distinction) and Commerce from UNSW, I possess a strong foundation in data-driven decision-making. 
+  I'm Nathan, a <strong>passionate Data Scientist</strong> at ITSM with over 2 years of industry experience. I'm currently pursuing a <strong>Master of Data Science</strong> at the University of Sydney 
+  and hold a double degree in Actuarial Studies (Distinction) and Commerce from UNSW. 
   <br><br>
   My technical expertise spans across R, Python, SQL, and Power BI. I have a proven track record in not only performing in-depth statistical and data analysis but also in 
-  <strong>deploying scalable machine learning/AI solutions into production</strong>. This includes end-to-end model development—from data preprocessing and feature engineering to model deployment 
-  and monitoring—ensuring that insights translate into real-world impact.
+  <strong>deploying scalable machine learning/AI solutions into production</strong>.
   <br><br>
   Explore my portfolio to see how these skills and experiences can bring value to your team through innovative, production-ready solutions.
   <br><br>
