--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   I'm Nathan, a <strong>passionate Data Scientist</strong> at ITSM with over 2 years of industry experience. I'm currently pursuing a <strong>Master of Data Science</strong> at the University of Sydney 
   and hold a double degree in Actuarial Studies (Distinction) and Commerce from UNSW. 
   <br><br>
-  My technical expertise spans across R, Python, SQL, and Power BI. I have a proven track record in not only performing in-depth statistical and data analysis but also in 
-  <strong>deploying scalable machine learning/AI solutions into production</strong>.
+  My technical expertise spans across <strong>R, Python, SQL, and Power BI</strong>. I have a proven track record in not only performing in-depth statistical and data analysis but also in 
+  <strong>deploying scalable machine learning/AI solutions</strong>.
   <br><br>
   Explore my portfolio to see how these skills and experiences can bring value to your team through innovative, production-ready solutions.
   <br><br>
